retainanet & tesnorflow versions upgrade

--- a/retinanet/docker/Dockerfile
+++ b/retinanet/docker/Dockerfile
@@ -2,11 +2,10 @@ FROM nvidia/cuda:9.0-cudnn7-runtime-ubuntu16.04
 
 MAINTAINER Adrian Margin
 
-ARG PYTHON_VERSION=3.5
+ARG PYTHON_VERSION=3.6
 ARG CONDA_PYTHON_VERSION=3
-ARG CONDA_VERSION=4.2.0
+ARG CONDA_VERSION=5.1.0
 ARG CONDA_DIR=/opt/conda
-ARG TINI_VERSION=v0.16.1
 ARG USERNAME=docker
 ARG USERID=1000
 
@@ -63,12 +62,12 @@ RUN $CONDA update --yes conda
 RUN $CONDA install -y h5py Pillow ipywidgets scikit-learn opencv \
   matplotlib pandas bcolz sympy scikit-image mkl-service flask
 
-RUN  $PIP install --upgrade pip
-RUN  $PIP install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-1.6.0-cp35-cp35m-linux_x86_64.whl
-RUN  $PIP install keras==2.1.3
-RUN  $PIP install grpcio statsd openpyxl tqdm pika elasticsearch
-RUN  $PIP install dask --upgrade
-RUN  $PIP install git+https://github.com/broadinstitute/keras-resnet
+RUN  $PIP install --upgrade pip dask
+RUN  $PIP install statsd openpyxl tqdm elasticsearch python-logstash logstash_formatter \
+    git+https://github.com/broadinstitute/keras-resnet \
+    amqpstorm==2.4.0 \
+    tensorflow_gpu==1.7.0 \
+    keras==2.1.5
 
 # user's home dir should be mapped from EFS
 RUN useradd --create-home -s /bin/bash --no-user-group -u $USERID $USERNAME && \
@@ -81,3 +80,4 @@ WORKDIR /home/$USERNAME
 COPY ./ ./python_modules
 RUN sudo chmod -R 777 ./python_modules/*
 WORKDIR /home/$USERNAME/python_modules/retinanet/tools
+
